# rye-test

./: README.md  cli.py  pyproject.toml  rye-sample.spec
src/rs/: __init__.py  calc.py  hello.py
tests/: test_rs.py
