[project]
name = "rye-sample"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "numpy>=1.26.4",
    "ruff>=0.6.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyter>=1.0.0",
    "pyinstaller>=6.4.0",
    "pytest>=8.3.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rs"]
